Updated the Drupal script installer to versions 6.25 and 7.12, ZenPhoto to 1.4.2.2, Autoload to 4.7.8, Horde to 3.3.13, IMP to 4.3.11, Horde Webmail to 1.2.11, SugarCRM to 6.4.2, phpMyAdmin to 3.4.10.2, PiWik to 1.7.1, Movable Type to 5.13, phpMyFAQ to 2.7.4, Radiant to 1.0.0, Dolibarr to 3.1.1, WebCalendar to 1.2.5, Mantis to 1.2.9, LimeSurvey to 1.92, Radiant to 1.0.1, RoundCube to 0.7.2, Moodle to 2.2.2, PHPList to 2.10.18, ZenCart to 1.5.0, MediaWiki to 1.18.2, phpPgAdmin to 5.0.4, Django to 1.4, Coppermine to 1.5.18, and Joomla to 2.5.3, 1.5.26 and 1.7.5.
Added a Virtualmin Configuration option to use an alternate S3-compatible backup service instead of Amazon's.
When cloning a virtual server with a private IP, a new address for the clone can be entered instead of relying on automatic IP allocation.
Extra administrators can now be granted permissions to edit DNS records and options.
When calling the remote API with the json, perl or xml format flags, multiline mode is automatically enabled so that the output from commands can be correctly parsed. API errors are also returned using the selected format.
---- Changes since 3.91 ----
Updated the Mantis script installer to version 1.2.10, ZenPhoto to 1.4.2.3, phpMyAdmin to 3.5.0, Gallery to 2.3.2, phpMyFAQ to 2.7.5, SugarCRM to 6.4.3, WordPress to 3.3.2, DokuWiki to 2012-01-25a, vTigerCRM to 5.4.0, Typo3 to 4.6.8, MediaWiki to 1.18.3, Magento to 1.7.0.0, and Joomla to 2.5.4.
Virtualmin backups can now be signed and encrypted, using GPG keys created within Virtualmin or imported from an existing file. This protects backups from snooping or modification when stored on an untrusted remote system.
Added a button to the Edit User page to re-send the signup email.
---- Changes since 3.92 ----
Updated the phpMyAdmin script installer to version 3.5.1, Drupal to 7.14 and 6.26, SugarCRM to 6.4.4, FengOffice to 2.0.0, Zikula to 1.2.9, and MediaWiki to 1.19.0.