@@ -66,7 +66,3 @@
  - Multi-part S3 backups
 	- https://virtualmin.com/node/21944
 	- http://aws.amazon.com/about-aws/whats-new/2010/11/10/Amazon-S3-Introducing-Multipart-Upload/
-	- S3 API commands (list, delete, upload, download)
-		- GPL version links
-		- commands-lib.pl ?
-		- CHANGELOG
